# travesim

./: .all-contributorsrc  .editorconfig  .gitignore  CHANGELOG.md  CHANGELOG.pt-br.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-br.md  CONTRIBUTING.md  CONTRIBUTING.pt-br.md  Dockerfile  LICENSE  README.md  README.pt-br.md  README_ptbr.md  docker-compose.yml  package.xml  requirements.txt
bagfiles/: README.md
config/: diffdrive.yaml  joint_names_vss_robot.yaml  joints.yaml  motor_diff_drive.yaml  motor_diff_drive.yml  motor_direct_drive.yml  motor_drive.yaml  motor_effort.yaml  ros_control_config.yml  vision_stat.yaml
hooks/: add_travesim_resource_path.sh.in
launch/: display.launch  export_images.launch  export_video.launch  gazebo.launch  simulation.launch  simulation_match.launch  simulation_robot.launch  simulation_robot.launch.py  simulation_team.launch  single_simulation.launch  spawn_match.launch  spawn_robot.launch  spawn_team.launch  team_simulation.launch
media/materials/scripts/: team_blue.material  team_yellow.material  vss.material
meshes/: Corpo.STL  RodaDir.STL  RodaEsq.STL  base_link.STL  base_link.stl  base_link_col.stl  chapeu_link.STL  chapeu_link.stl  corpo.STL  parede_dir_link.STL  parede_dir_link.stl  parede_esq_link.STL  parede_esq_link.stl  roda_dir_link.STL  roda_dir_link.stl  roda_esq_link.STL  roda_esq_link.stl  tile_inf_dir_link.STL  tile_inf_esq_link.STL  tile_sup_dir_link.STL  tile_sup_esq_link.STL
models/golf_ball/: model.config  model.sdf
models/my_sun/: model.config  model.sdf
models/vss_ball/: model.config  model.sdf
models/vss_camera/: model.config  model.sdf
models/vss_field/: model.config  model.sdf
models/vss_field/materials/scripts/: vss_field.material
models/vss_field/meshes/: base_link.stl  field_link.stl  laterais_link.stl  marcas_campo.stl
models/vss_field_5/: model.config  model.sdf
models/vss_field_5/meshes/: base_link.stl  laterais_link.stl  marcas_campo.stl
scripts/: keyboard_node.py  spawn_robots.py  usb_dongle.py  velocity_conversion.py  velocity_proxy.py  vision_proxy.py
urdf/: README.md  README.pt-br.md  generic_vss_robot.color  generic_vss_robot.gazebo  generic_vss_robot.urdf  generic_vss_robot.xacro  generic_vss_team.gazebo  hat_colors.xacro  materials.xacro  motor.xacro  vss_robot.csv  vss_robot.gazebo  vss_robot.sdf  vss_robot.urdf  vss_robot.xacro  vss_team.xacro
worlds/: vss_field.world  vss_field_5.world  vss_field_camera.world  vss_field_spots.world  vss_field_top.world
