<package format="2">
  <name>travesim</name>
  <version>2.0.0</version>
  <description>
    <p>Gazebo simulation package for VSS robots</p>
    <p>This package contains configuration data, 3D models and launch files
for vss_robot robot</p>
  </description>
  <author>Felipe Gomes de Melo</author>
  <maintainer email="felipe.gomes@thunderatz.org" />
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>velocity_controllers</depend>
  <depend>effort_controllers</depend>

  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-pygame</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
