<package format="3">
  <name>travesim</name>
  <version>2.0.0</version>
  <description>
    <p>Gazebo simulation package for VSS robots</p>
    <p>This package contains configuration data, 3D models and launch files
for vss_robot robot</p>
  </description>
  <author>Felipe Gomes de Melo</author>
  <maintainer email="felipe.gomes@thunderatz.org" />
  <license>MIT</license>

  <buildtool_depend>colcon</buildtool_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gz_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
